[package]
name = "tfmt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.0", features = ["derive"] }
lazy_static = "1.4.0"
paste = "1.0.11"
pest = "2.5.3"
pest_derive = "2.5.3"
